# research-excalibur-visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  schema-locator.sh  shell.nix
nix/: sources.json
src/: CMakeLists.txt  main.cpp  parsers.hpp  table.hpp
